# raum-chrysalis-v2

./: .gitignore  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml
apps/agent-worker/: package.json
apps/agent-worker/src/: index.ts
apps/api/: package.json  vercel.json
apps/api/src/: app.ts  server.ts  types.ts
apps/web/: next.config.mjs  package.json
apps/web/public/: llms.txt
apps/web/src/: providers.tsx
configs/: agent-policies.json  chains.json  fee-model.json  protocols.json
contracts/: foundry.toml  package.json
contracts/script/: DeployAaveOnly.s.sol  DeployAaveSwapDeposit.s.sol  DeployArc.s.sol  DeployDestination.s.sol  DeployIntentTraceRegistry.s.sol  DeployReceiptNFT.s.sol  RecordSampleIntentTrace.s.sol  RegisterEthUniswapV3Adapter.s.sol  SwapEthToUsdc.s.sol
contracts/src/: ArcReceiptNFT.sol  IntentTraceRegistry.sol
contracts/src/adapters/: AaveV3Adapter.sol  AaveV3SwapDepositAdapter.sol  AdapterBase.sol  ArcUsycTellerAdapter.sol  (+6 more)
contracts/test/: IntentTraceRegistry.t.sol
dune/: intent_trace_registry_raw.sql
programs/solana/: Anchor.toml  Cargo.toml
programs/solana/adapters/marinade_adapter/: Cargo.toml
programs/solana/adapters/marinade_adapter/src/: lib.rs
programs/solana/adapters/raydium_adapter/: Cargo.toml  README.md
programs/solana/adapters/raydium_adapter/src/: lib.rs
programs/stellar/: Cargo.toml
programs/stellar/contracts/aquarius_adapter/: Cargo.toml
programs/stellar/contracts/aquarius_adapter/src/: lib.rs
programs/stellar/contracts/blend_adapter/: Cargo.toml  README.md
programs/stellar/contracts/blend_adapter/src/: lib.rs
scripts/: deploy-arc.sh  deploy-destination.sh  deploy-solana-adapters.sh  deploy-stellar-adapters.sh  fund-keys.ts  generate-keys.ts  init-marinade-adapter.mjs  package.json  register-adapters.ts  setup.sh
(+78 files in other folders)
