[package]
name = "marinade_adapter"
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"
description = "Chrysalis V2 Solana adapter for Marinade Finance - composite swap+unwrap+deposit"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "marinade_adapter"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
