[package]
name = "raydium_adapter"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "Chrysalis V2 Solana adapter for Raydium CPMM CPI execution"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_adapter"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
